--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 body{
     background-color: black;
 color: white;
+margin: 0px ;
+padding: 0px;
 }
 
 .maincontainer{
    
-    border: 2px solid white;
-    width: 1070px;
+    /* border: 2px solid white; */
+    width: 100%;
     height: 670px;
     
     display: flex;
@@ -30,11 +32,12 @@ color: white;
        
         
         .Lheader{
+            /* border: 2px solid white; */
             width: 60%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            padding: 9px;
+            /* padding: 9px; */
             margin-left: 40px;
             /* border: 2px solid white; */
 
@@ -42,10 +45,18 @@ color: white;
                 display: flex;
                 flex-direction: row;
                 /* border: 2px solid white; */
+                padding: 7px;
+            }
+            .Lnav:hover{
+                background-color:  #333131 ;
+                border-radius: 5px;
+                border-bottom: 1px groove  white;
+
+                
             }
         }   
         .rheader{
-            border: 2px solid red;
+            /* border: 2px solid red; */
             width: 30%;
             display: flex;
             flex-direction: row;
@@ -68,26 +79,38 @@ color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 130px;
+    margin-top: 30px;
+    
     
     .Ldiv{
-        border: 2px solid #d5decd;
+        /* border: 2px solid #d5decd; */
         width: 60%;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 20px;
+        justify-content: center;
+        margin-left: 50px;
         
         .name{
-            margin-left: 150px;
-            font-size: 24px;
+          text-align: center;
+            
+            font-size: 44px;
             font-weight: bold;
         }
     }
     
-   .rdiv{
-    width: 40%;
-    
+   .Rdiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid white; */
+    width: 30%;
+    img{
+   
+        width: 270px;
+        border-radius: 50%;
+    }
    }
     
 }
@@ -116,7 +139,7 @@ border-radius: 30px;
 font-size: larger;
 }
 .mainfooter{
-    border: 2px solid white;
+    /* border: 2px solid white; */
     width: 100%;
     
   
@@ -135,7 +158,7 @@ font-size: larger;
    
 }
 .innerbox{
-    border: 2px solid #1B1B1B ;
+    /* border: 2px solid #1B1B1B ; */
    padding:  20px;
    width: 105px;
    
@@ -144,7 +167,7 @@ font-size: larger;
    color: #9c9c9c;
    
 }
-/* .Lnav*/ .mainhead:hover{ 
+/* .Lnav .mainhead:hover{ 
    
     background-color: #333131;;
    
@@ -157,11 +180,11 @@ font-size: larger;
             background-color: #161414;
             width: max-content;
             height:max-content;
-            text-align: center;
+            text-align: center; */
             /* padding-left: 10px; */
-             border-radius: 0px 0px 5px 5px; 
+             /* border-radius: 0px 0px 5px 5px;  */
              
-             padding: 8px;
+             /* padding: 8px; */
 
-        }
-    }
+        /* }
+    } */
