--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ font-size: larger;
    
 }
 .innerbox{
-    /* border: 2px solid #1B1B1B ; */
+    border: 2px solid #1B1B1B ; 
    padding:  20px;
    width: 105px;
    
