--- a/styles.css
+++ b/styles.css
@@ -58,16 +58,17 @@ padding: 0px;
         }   
         .rheader{
             /* border: 2px solid red; */
-            width: 30%;
+            width: 20%;
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
             align-items: center; 
            
             .ricon{
+                /* border: 2px solid white; */
                 display: flex;
                 flex-direction: row;
-                justify-content: space-evenly;
+                
                
             }
         }
@@ -161,6 +162,9 @@ font-size: larger;
    
 }
 .innerbox{
+    display: flex;
+justify-content: center;
+align-items: center;
     border: 2px solid #1B1B1B ;
    padding:  20px;
    width: 105px;
@@ -276,3 +280,12 @@ margin-left: 15%;
     
 }
 }
+.downbutton{ 
+    img{
+        width: 20px;
+    }
+}
+i{
+    font-size: 22px !important;
+}
+
